# mlops-energy-forecasting

./: .gitignore
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: ml_pipeline_dag.py
batch-prediction-pipeline/: pyproject.toml
batch-prediction-pipeline/batch_prediction_pipeline/: batch.py  monitoring.py  utils_aws.py
feature-pipeline/: pyproject.toml
training-pipeline/: pyproject.toml
training-pipeline/training_pipeline/: train.py
